src/test/ui/issue-35976.stderr
error: the `wait` method cannot be invoked on a trait object
  --> $DIR/issue-35976.rs:24:9
   |
24 |     arg.wait();
   |         ^^^^
help: another candidate was found in the following trait, perhaps add a `use` for it:
   |
11 | use private::Future;
   |

error: aborting due to previous error

